@@ -4,6 +4,10 @@ $Id$
 	- changed how email2page handles the header regex list.  This
 	  what it'll allow each rule to match each header line, rather
 	  that just the first match.  Recommended by Erastus Z Allen.
+	- changed syslog-facility default to "daemon".  To keep
+	  prior behavior, set "syslog-facility = local6".
+	- created syslog-minlevel with default of "info". To keep
+	  prior behavior, set "syslog-minlevel = debug".
 
 0.9.14: (31May2002)
 	- oops!  I recreated an earlier bug where splits would destroy
